[package]
name = "provenance-mark"
version = "0.11.0"
edition = "2024"
description = "A cryptographically-secured system for establishing and verifying the authenticity of works"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/provenance-mark-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/provenance-mark"
keywords = [
    "cryptography",
    "provenance",
    "copyright",
    "blockchain",
] # Up to five
categories = [
    "cryptography",
    "authentication",
] # https://crates.io/category_slugs

[dependencies]
dcbor = { version = "^0.22.0", features = ["multithreaded"] }
bc-rand = "^0.4.0"
sha2 = "^0.10.6"
hkdf = "^0.12.3"
bc-ur = "^0.12.0"
bc-tags = "^0.5.0"
bc-envelope = { version = "^0.33.0", optional = true }

chrono = { version = "0.4", features = ["serde"] }
anyhow = "^1.0.0"
hex = { version = "^0.4.3", default-features = true }
chacha20 = "0.9.1"
rand_core = "0.6"
serde = { version = "^1.0.0", features = ["derive"] }
base64 = "^0.22.0"
serde_json = "^1.0.132"
url = "2.5.3"

[dev-dependencies]
indoc = "^2.0.0"
version-sync = "^0.9.0"
hex-literal = "^0.4.1"

[features]
default = ["envelope"]
envelope = ["bc-envelope"]
